# goldrust

./: .env.example  Cargo.toml  justfile
.github/workflows/: check.yml
src/: error.rs  lib.rs
tests/: base.rs  without_function_id.rs
