[package]
name = "goldrust"
description = "A Rust library for testing HTTP clients with golden files."
version = "0.1.10"
edition = "2021"
rust-version = "1.79.0" # In order to use `insepct_err`
repository = "https://github.com/sjunepark/goldrust"
license = "MIT"
keywords = ["testing", "mocking", "golden-file"]

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
image = { version = "0.25.4", optional = true }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
static_assertions = "1.1.0"
thiserror = "2.0.4"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wiremock = "0.6.2"

# To satisfy -Zminimal-versions
[target.'cfg(any())'.dependencies]
openssl-sys = { version = "0.9.104", optional = true }
openssl = { version = "0.10.68", optional = true }
num-bigint = { version = "0.4.6", optional = true }

[features]
image = ["dep:image"]
